# sdjson

./: Dockerfile  README.md  ccasdtv.py  display.py  printjson.py  ptvg.py  pyproject.toml
sdjson/: __init__.py  cache.py  ccabase.py  ccasdtv-configure.py  ccasdtv.py  ccasdtvg.py  config.py  credential.py  db.py  html.py  lineup.py  programs.py  schedule.py  sd.py  sdapi.py  sduser.py  startup.py  timedisplay.py  windows.py
sql/: create-tables.sql
test/: test_ccasdtv.py  test_html.py
