[tool.poetry]
name = "sdjson"
version = "0.1.13"
description = "reads schedules direct for tvlistings"
authors = ["ccdale <chris.charles.allison+sdjson@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
pyaml = "^20.4.0"
click = "^7.1.2"
ccalogging = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
